<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoTest">



    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.35"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="333dp"
        android:layout_height="81dp"
        android:fontFamily="serif"
        android:text="@string/title_hoyos"
        android:textAlignment="textStart"
        android:textColor="#D1AF5F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:layout_editor_absoluteX="-3dp"
            tools:layout_editor_absoluteY="109dp">


            <TextView
                android:id="@+id/texto_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/texto_hoyos"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pregunta_foro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pregunta_hoyos1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/opciones_test1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/test1_opcion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test1_opcion1" />

                <RadioButton
                    android:id="@+id/test1_opcion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/hoyos_test1_opcion2" />

                <RadioButton
                    android:id="@+id/test1_opcion3"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test1_opcion3" />


                <RadioButton
                    android:id="@+id/test1_opcion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test1_opcion4" />
            </RadioGroup>

            <TextView
                android:id="@+id/pregunta_foro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pregunta_hoyos2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/opciones_test2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/test2_opcion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test2_opcion1" />

                <RadioButton
                    android:id="@+id/test2_opcion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test2_opcion2" />

                <RadioButton
                    android:id="@+id/test2_opcion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/hoyos_test2_opcion3" />


                <RadioButton
                    android:id="@+id/test2_opcion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/hoyos_test2_opcion4" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonResolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D1AF5F"
                android:text="@string/resolver"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/atras"
        android:layout_width="58dp"
        android:layout_height="54dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="33dp"
        android:background="#E0DFDF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#FF9800" />


</androidx.constraintlayout.widget.ConstraintLayout>